--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   wait:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-slim
     steps:
       - name: Wait for the build ecp-ai workflow to complete
         uses: lewagon/wait-on-check-action@v1.4.0
