--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           ref: ${{ github.sha }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-name: 'build trace-exchanger.*'
+          check-name: 'push multi-arch manifest for trace-exchanger'
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
 
@@ -36,7 +36,7 @@ jobs:
         with:
           ref: ${{ github.sha }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-regexp: 'build emqxee-agent.*'
+          check-name: 'push multi-arch manifests for emqxee-agent images'
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
 
@@ -45,7 +45,7 @@ jobs:
         with:
           ref: ${{ github.sha }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          check-name: 'build emqx-bc-web.*'
+          check-name: 'push multi-arch manifest for ecp-ui'
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
   
