fix(ci): 修正GitHub Actions镜像排除匹配规则
- 修改正则表达式，去除开头锚点符号以修正镜像匹配范围
- 确保在工作流中正确排除指定镜像
- 优化release.yml中镜像处理逻辑的稳定性

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -183,7 +183,7 @@ jobs:
           echo 'images<<EOF' >> $GITHUB_OUTPUT
           while read -r image; do
             # 排除指定镜像
-            if [[ "$image" =~ ^(trace-exchanger|ecp-emqx-agent-downloader|ecp-emqx-agent|ecp-ai|ecp-main|ecp-ui)$ ]]; then
+            if [[ "$image" =~ (trace-exchanger|ecp-emqx-agent-downloader|ecp-emqx-agent|ecp-ai|ecp-main|ecp-ui) ]]; then
               continue
             fi
             echo "$image"
