fix(workflow): 修复 release.yml 中的延迟命令和构建等待时间
- 将 Python 的 time.sleep 替换为 shell 的 sleep 命令，确保工作流兼容性
- 在创建多平台镜像工具后增加 5 秒暂停，避免过快执行导致错误
- 保持等待依赖构建的时间为 3 分钟，保证构建顺序正确

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: init wait
         run: |
           echo "Waiting for the dependencies build workflow to complete..."
-          time.sleep(60*3)  # Wait for 3 minutes
+          sleep 180  # Wait for 3 minutes
       - name: Wait for the build ecp-ai workflow to complete
         uses: lewagon/wait-on-check-action@v1.4.1
         with:
@@ -383,6 +383,7 @@ jobs:
             target=ghcr.io/emqxecp/${image##*/}
             set -- ${MAP["$image"]}
             docker buildx imagetools create -t "$target" "$1" "$2"
+            sleep 5
           done
 
   release:
