fix(workflows): 修复依赖多架构镜像创建的并发问题
- 在 release.yml 工作流中添加 docker/setup-buildx-action@v3 步骤
- 调整 docker buildx imagetools create 命令，加入 --no-concurrent 参数
- 解决多架构镜像创建时的并发冲突问题
- 保持每次镜像创建间隔 5 秒以防止资源争用

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -370,6 +370,7 @@ jobs:
         with:
           name: dependency-digests-arm64
           path: dep-arm64
+      - uses: docker/setup-buildx-action@v3
       - name: Create and push multi-arch manifests for dependencies
         run: |
           declare -A MAP
@@ -382,7 +383,7 @@ jobs:
           for image in "${!MAP[@]}"; do
             target=ghcr.io/emqxecp/${image##*/}
             set -- ${MAP["$image"]}
-            docker buildx imagetools create -t "$target" "$1" "$2"
+            docker buildx imagetools create --no-concurrent  -t "$target" "$1" "$2"
             sleep 5
           done
 
