fix(workflows): 移除镜像构建并发限制
- 更新 GitHub 工作流 release.yml 文件
- 从 docker buildx imagetools create 命令中移除 --no-concurrent 参数
- 允许镜像构建操作并发执行
- 保持现有的标签和构建参数不变
- 添加了每次构建后的 5 秒延迟保障稳定性

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -383,7 +383,7 @@ jobs:
           for image in "${!MAP[@]}"; do
             target=ghcr.io/emqxecp/${image##*/}
             set -- ${MAP["$image"]}
-            docker buildx imagetools create --no-concurrent  -t "$target" "$1" "$2"
+            docker buildx imagetools create -t "$target" "$1" "$2"
             sleep 5
           done
 
