ci(workflow): 添加将依赖镜像推送到ghcr.io的功能
在发布工作流中新增步骤，将依赖镜像重新打标签并推送到ghcr.io仓库
同时更新收集镜像摘要的逻辑以使用新推送的镜像

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -199,11 +199,20 @@ jobs:
           while read -r image; do
             docker pull $image
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
+      - name: Push dependency images to ghcr.io
+        run: |
+          while read -r image; do
+            name="${image##*/}"
+            target="ghcr.io/emqxecp/${name}-${{ matrix.suffix_platform }}"
+            docker tag "$image" "$target"
+            docker push "$target"
+          done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - name: Collect dependency image digests
         run: |
           > dependency-digests.txt
           while read -r image; do
-            rd=$(docker inspect --format='{{index .RepoDigests 0}}' $image)
+            name="${image##*/}"
+            rd=$(docker inspect --format='{{index .RepoDigests 0}}' "ghcr.io/emqxecp/${name}-${{ matrix.suffix_platform }}")
             echo "$image $rd" >> dependency-digests.txt
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - uses: actions/upload-artifact@v4
