--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -212,8 +212,8 @@ jobs:
           > dependency-digests.txt
           while read -r image; do
             name="${image##*/}"
-            rd=$(docker inspect --format='{{index .RepoDigests 0}}' "ghcr.io/emqxecp/${name}-${{ matrix.suffix_platform }}")
-            echo "$image $rd" >> dependency-digests.txt
+            rd=$(docker buildx imagetools inspect "ghcr.io/emqxecp/${name}-${{ matrix.suffix_platform }}" --format "{{.Digest}}")
+            echo "$image ghcr.io/emqxecp/${name}@${rd}" >> dependency-digests.txt
           done <<< "${{ steps.get-dependency-images.outputs.images }}"
       - uses: actions/upload-artifact@v4
         with:
@@ -404,9 +404,9 @@ jobs:
               while [ $retry_count -le $max_retries ]; do
                   echo "尝试 $((retry_count + 1))/$((max_retries + 1))"
                   
-                  if docker buildx imagetools create -t "$target" "$1" "$2" 2>&1; then
-                      echo "✓ 成功推送: $target"
-                      break
+              if docker buildx imagetools create -t "$target" "$@" 2>&1; then
+                  echo "✓ 成功推送: $target"
+                  break
                   else
                       retry_count=$((retry_count + 1))
                       if [ $retry_count -gt $max_retries ]; then
