--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -391,72 +391,55 @@ jobs:
         continue-on-error: false
         timeout-minutes: 20
         run: |
-          declare -A MAP
-          while read -r image digest; do
-              # Skip empty lines and lines that don't contain proper image references
-              if [[ -z "$image" ]] || [[ -z "$digest" ]] || [[ "$image" == "MediaType"* ]] || [[ "$digest" == "MediaType"* ]] || [[ "$digest" == *"Digest:" ]]; then
+          # Combine dependency digests from both architectures
+          cat dep-amd64/dependency-digests.txt dep-arm64/dependency-digests.txt > combined-digests.txt
+          
+          # Group images by their base name (without arch suffix)
+          declare -A IMAGE_MAP
+          while read -r original_image mapped_image; do
+              # Skip empty lines and invalid entries
+              if [[ -z "$original_image" ]] || [[ -z "$mapped_image" ]] || [[ "$original_image" == "MediaType"* ]] || [[ "$mapped_image" == "MediaType"* ]] || [[ "$mapped_image" == *"Digest:" ]]; then
                   continue
               fi
+              
               # Validate that digest looks like a proper sha256 digest
-              if ! echo "$digest" | grep -qE '@sha256:[a-f0-9]{64}$'; then
-                  echo "Skipping invalid digest for $image: $digest"
+              if ! echo "$mapped_image" | grep -q 'sha256:[a-f0-9]\{64\}'; then
+                  echo "Skipping invalid digest for $original_image: $mapped_image"
                   continue
               fi
-              MAP["$image"]+=" ${digest}"
-          done < dep-amd64/dependency-digests.txt
-          while read -r image digest; do
-              # Skip empty lines and lines that don't contain proper image references
-              if [[ -z "$image" ]] || [[ -z "$digest" ]] || [[ "$image" == "MediaType"* ]] || [[ "$digest" == "MediaType"* ]] || [[ "$digest" == *"Digest:" ]]; then
-                  continue
-              fi
-              # Validate that digest looks like a proper sha256 digest
-              if ! echo "$digest" | grep -qE '@sha256:[a-f0-9]{64}$'; then
-                  echo "Skipping invalid digest for $image: $digest"
-                  continue
-              fi
-              MAP["$image"]+=" ${digest}"
-          done < dep-arm64/dependency-digests.txt
-
-          for image in "${!MAP[@]}"; do
-              # Validate image name is lowercase and doesn't contain invalid characters
-              image_name="${image##*/}"
-              if [[ "$image_name" != *[[:upper:]]* ]] && [[ -n "$image_name" ]]; then
-                  target=ghcr.io/emqxecp/${image_name}
-                  set -- ${MAP["$image"]}
+              
+              # Extract base image name from the mapped image (remove -amd64 or -arm64 suffix and @digest part)
+              # Format is: ghcr.io/emqxecp/name:tag-arch@sha256:...
+              base_name=$(echo "$mapped_image" | sed -E 's/ghcr\.io\/emqxecp\/(.+):(.+)-(amd64|arm64)@.*/\1:\2/')
+              IMAGE_MAP["$base_name"]+=" $mapped_image"
+          done < combined-digests.txt
+          
+          # Push multi-arch manifests for each image
+          for base_name in "${!IMAGE_MAP[@]}"; do
+              # Validate image name
+              if [[ -n "$base_name" ]] && [[ "$base_name" != *[[:upper:]]* ]]; then
+                  target="ghcr.io/emqxecp/$base_name"
+                  # Convert space-separated string to positional parameters
+                  set -- ${IMAGE_MAP["$base_name"]}
                   
                   # Skip if no valid digests
-                  if [ $# -eq 0 ] || [[ "${MAP[$image]}" == " " ]]; then
-                      echo "跳过无效镜像: $image"
+                  if [ $# -eq 0 ]; then
+                      echo "跳过无效镜像: $base_name"
                       continue
                   fi
                   
                   echo "=== 开始推送多架构镜像: $target ==="
-                  
-                  max_retries=3
-                  retry_count=0
-                  
-                  while [ $retry_count -le $max_retries ]; do
-                      echo "尝试 $((retry_count + 1))/$((max_retries + 1))"
-                      
-                      if docker buildx imagetools create -t "$target" "$@" 2>&1; then
-                          echo "✓ 成功推送: $target"
-                          break
-                      else
-                          retry_count=$((retry_count + 1))
-                          if [ $retry_count -gt $max_retries ]; then
-                              echo "✗ 错误: 推送 $target 失败，已达最大重试次数"
-                              exit 1
-                          fi
-                          wait_time=$((retry_count * 15))
-                          echo "推送失败，${wait_time}秒后重试..."
-                          sleep $wait_time
-                      fi
-                  done
+                  if docker buildx imagetools create -t "$target" "$@"; then
+                      echo "✓ 成功推送: $target"
+                  else
+                      echo "✗ 错误: 推送 $target 失败"
+                      exit 1
+                  fi
               else
-                  echo "跳过无效镜像名称: $image_name"
+                  echo "跳过无效镜像名称: $base_name"
               fi
           done
-
+          
           echo "所有镜像推送完成！"
 
   release:
